--- a/app/app.css
+++ b/app/app.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
 @plugin "@tailwindcss/typography";
+@plugin "tailwindcss-animate";
 
 @theme {
 	--default-font-family: "Quicksand Variable";
