--- a/app/app.css
+++ b/app/app.css
@@ -65,7 +65,7 @@
 }
 
 @utility button-base {
-	@apply flex items-center transition border border-solid font-medium shadow-sm focus:outline-none focus:ring-2;
+	@apply flex items-center transition border border-solid font-medium shadow-sm focus:outline-none focus:ring-2 rounded-md px-3 py-2;
 }
 
 @utility button-solid {
