--- a/app/app.css
+++ b/app/app.css
@@ -6,6 +6,11 @@
 @import "uploadthing/tw/v4";
 @source "../node_modules/@uploadthing/react/dist";
 
+@import "./styles/layout.css";
+@import "./styles/panel.css";
+@import "./styles/button.css";
+@import "./styles/menu.css";
+
 @theme {
 	--default-font-family: "Quicksand Variable";
 
@@ -54,28 +59,4 @@
 	.footnotes {
 		@apply border-t border-gray-700 text-sm text-gray-300;
 	}
-}
-
-@utility panel {
-	@apply bg-primary-dark border-primary-900 rounded-lg border;
-}
-
-@utility page-container {
-	@apply max-w-page-body mx-auto w-full px-4;
-}
-
-@utility button-base {
-	@apply flex items-center rounded-md border border-solid px-3 py-2 font-medium shadow-sm transition focus:ring-2 focus:outline-none;
-}
-
-@utility button-solid {
-	@apply button-base bg-primary-500/20 border-primary-500 hover:button-solid-active focus:ring-primary-500/50;
-}
-
-@utility button-solid-active {
-	@apply bg-primary-500/30;
-}
-
-@utility button-ghost {
-	@apply button-base border-transparent opacity-75 hover:bg-gray-500/30 hover:opacity-100 focus:ring-gray-500/50;
 }
