add heading-xl class

--- a/workspaces/web/app/styles/typography.css
+++ b/workspaces/web/app/styles/typography.css
@@ -2,6 +2,10 @@
 	@apply text-3xl font-light;
 }
 
+@utility heading-xl {
+	@apply heading text-xl;
+}
+
 @utility heading-2xl {
 	@apply heading text-2xl;
 }
